changes in calendar

--- a/conferences.html
+++ b/conferences.html
@@ -168,16 +168,21 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://mega.sciencesconf.org/"></a>Real Algebraic Geometry and Interactions (RAGI),
+   <a href="https://ragi.sciencesconf.org/">Real Algebraic Geometry and Interactions (RAGI)</a>,
    Universit&eacute;  Cote d'Azur, Nice, 6 &ndash; 10 October 2025.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/">37th International Conference on Formal Power Series and Algebraic
-     Combinatorics (FPSAC 2025)</a>,
-   Hokkaido  University, Sapporo, Japan, 
-   21  &ndash; 25 July 2025.
+   <a href="https://sites.google.com/view/siamtxla2025/">SIAM TX-LA meeting</a>,
+   Oden Institute, University of Texas at Austin, ICERM, Providence, RI, 26&ndash;28 September 2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://www.siam.org/conferences-events/siam-conferences/an25/">Joint SIAM/CAIMS Annual Meetings</a>,
+   Montr&eacute;al Convention Centre, 
+   28 July &ndash; 1 August 2025.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
@@ -204,14 +209,6 @@
    19  &ndash; 30 May  2025.
  </li>
  <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
-   26&ndash;30 May 2025.
-   Fields Institute Toronto.  <a href="conferences/Fields25/index.html">Reading List</a> for Algebraic Aspects of Periodic Operators,
-   organized with Matthew Faust and Stephen Shipman.
- </li>
- <!---------------------------------------------------------------------------------------------------->
 </UL>
 
 </td>
@@ -226,7 +223,7 @@
 <address></address>
 <!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Tue Mar 04 14:14:07 CST 2025 by sottile</p>  
+<p>Last modified: Thu Jun 12 01:03:51 PDT 2025 by sottile</p>  
 <!---------------------------------------------------------------------------------------------------->
 
 </body> </html>
