--- a/conferences/index.html
+++ b/conferences/index.html
@@ -30,12 +30,6 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://www.mathunion.org/icm/icm-2026">International Congress of Mathematicians</a>, 23 &ndash; 30 July 2026,
-   Philadelphia, PA.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
    <a href=""></a>FoCM 2026,
    Vienna, 8  &ndash; 18 July 2026.
    <a href="http://focm-society.org/">Webpage of the Foundations of Computational Mathematics</a>.
@@ -50,27 +44,12 @@
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
-   26&ndash;30 May 2025.
-   Fields Institute Toronto.  <a href="Fields25/index.html">Reading List</a> for Algebraic Aspects of Periodic Operators,
-   organized with Matthew Faust and Stephen Shipman.
- </li>
- <!---------------------------------------------------------------------------------------------------->
 </ul>
 <!------------------------------------------------------------------------>
 <hr>
 <!------------------------------------------------------------------------>
 <B><FONT SIZE=+1 color=brown>Conference organized for Frank Sottile</FONT></B>
 <ul>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
-   Texas A&amp;M University,
-   28  &ndash; 30 March 2025.<br>
-   Supported by NSF grant DMS-2349244.
- </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
@@ -87,6 +66,23 @@
 <!------------------------------------------------------------------------>
 <B><FONT SIZE=+1 color=brown>Past organizing</FONT></B>
 <UL>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   Algebraic Aspects of Periodic Operators in
+   <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
+   26&ndash;30 May 2025.
+   Fields Institute Toronto.  <a href="conferences/Fields25/index.html">Reading List</a> for 
+   organized with Matthew Faust and Stephen Shipman.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
+   Texas A&amp;M University,
+   28  &ndash; 30 March 2025.<br>
+   Supported by NSF grant DMS-2349244.
+ </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
