--- a/talks.html
+++ b/talks.html
@@ -134,7 +134,14 @@
     <a href="talks/25/TX-LA25.txt"></a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
-   <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
+    Seminar, London Institute of Mathematical Sciences, 23 July 2025.
+    <a href="talks/24/Golden.txt">Abstract</a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
     Plenary talk, <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
@@ -142,6 +149,12 @@
     Madison, Wisconsin, 7&ndash;11 July 2025.
     <a href="talks/25/AG25.txt">abstract</a>.
    </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
@@ -161,12 +174,6 @@
    <a href="talks/25/Fields_25.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
-    <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Platonic solids in the next dimension</I></font>,
@@ -181,7 +188,7 @@
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
     Algebraic Geometry Seminar, Stanford University, 14 March  2025.
-    <a href="talks/21/Discriminant.txt"></a>  
+    <a href="talks/24/Golden.txt">Abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
