--- a/advising/index.html
+++ b/advising/index.html
@@ -185,17 +185,18 @@
      <li>
     Isaiah Galo,  TAMU Master's Student.
     </li>
-    <!---------------------------------------------------------------------------------------------------->  
+   <!---------------------------------------------------------------------------------------------------->  
+   <hr align=left width=40%>
+   <!---------------------------------------------------------------------------------------------------->  
    <li>
-     Jonah Robinson,  TAMU Master's Student.
+     Jonah Robinson,  TAMU Master's Student.   Graduated in May 2025.
     </li>
     <li>
-     Merri Stillman,  Master's Student in Distance Program.
+     Merri Stillman,  Master's Student in Distance Program. Graduated in May 2025.
     </li>
  <!--   <li>
      Jennifer Pickrel,  Master's Student in Distance Program.
     </li>-->
-   <hr align=left width=40%>
     <li>
      A.J. Perea, Master's Student in Distance Program.    Graduated in December 2023.
     </li>
@@ -264,15 +265,26 @@
   </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
-  <li>
-    <A HREF=""></a>C.J. Bott, 2020&ndash;
-  </li>
- <!------------------------------------------------------------------>
  <BR>
  <!------------------------------------------------------------------>
  <!-----------             Completed Theses             ------------->
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
+  <li>
+        <A HREF=""></a>C.J. Bott, 2020&ndash;2025.  (Ph.D. 2025).
+    <table>
+    <tr><td></td><td></td>
+     <td>Teaching Postdoc at Bringham Young University.</td> 
+    </tr>
+    <tr>
+     <td>&nbsp;</td>
+     <td><A HREF="bott.pdf"><IMG SRC="../images/pdf.gif"></A></td>
+     <td><font color="ff00ff"><i>Computation of Schubert Galios Groups</i></font>,
+        Ph.D.&nbsp;Thesis.
+     </td>
+     </tr>
+    </table>
+   </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
@@ -283,7 +295,7 @@
     </tr>
     <tr>
      <td>&nbsp;</td>
-     <td><A HREF="Faust.pdf"><IMG SRC="../images/pdf.gif"></A></td>
+     <td><A HREF="faust.pdf"><IMG SRC="../images/pdf.gif"></A></td>
      <td><font color="ff00ff"><i>Combinatorial Algebraic Geometry and Discrete Periodic Operators</i></font>,
         Ph.D.&nbsp;Thesis.
      </td>
@@ -300,7 +312,7 @@
     </tr>
     <tr>
      <td>&nbsp;</td>
-     <td><<!--<A HREF="Faust.pdf"><IMG SRC="../images/pdf.gif">--></A></td>
+     <td><A HREF="yahl.pdf"><IMG SRC="../images/pdf.gif"></A></td>
      <td><font color="ff00ff"><i>Computational Aspects of Galois Groups in Enumerative Geometry</i></font>,
         Ph.D.&nbsp;Thesis.
      </td>
@@ -312,7 +324,7 @@
       <A HREF=""></a>Elise Walker 2017&ndash; 2022. (Ph.D. 2022).
     <table>
     <tr><td></td><td></td>
-     <td>Stff Scientist at Sandia National Labs.</td> 
+     <td>Staff Scientist at Sandia National Labs.</td> 
     </tr>
     <tr>
      <td>&nbsp;</td>
@@ -349,7 +361,7 @@
     </tr>
     <tr>
      <td>&nbsp;</td>
-     <td><A HREF="Ying.pdf"><IMG SRC="../images/pdf.gif"></A></td>
+     <td><A HREF="ying.pdf"><IMG SRC="../images/pdf.gif"></A></td>
      <td><font color="ff00ff"><i>Stability of Heisenberg Coefficients</i></font>,
         Ph.D.&nbsp;Thesis.
      </td>
