--- a/biography.html
+++ b/biography.html
@@ -32,6 +32,7 @@ he on the GI Bill (he was a member of the Army of Occupation in Germany during t
 They met at <a Href="http://www.emich.edu/">Eastern Michigan University</a>, and raised
  five sons (I was number two and born in 1963 in Michigan).
 My brothers are all quite accomplished.
+Here is a <a href="images/frank/My_Family.jpg">picture</a> of us from the late 1960s (I am at your left).
 
 <p>
 While I was determined to be a scientist since about first grade
