--- a/research/publications.html
+++ b/research/publications.html
@@ -194,31 +194,6 @@ Jump to <A HREF="#preprints">preprints</A>,
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>6
 </TD> <TD>
-<!------------------------------------------------------------------------>
-<!-----------------      Version of 6 June 2024       -------------------->
-<!------------------------------------------------------------------------>
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/qMurnaghan.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
-     <TD valign=center>
-       <FONT COLOR="FF00FF">
-      <I>A quantum Murnaghan--Nakayama rule for the flag manifold</I></FONT>.
-      with
-       <A HREF="https://sites.google.com/site/carobenedettimath">Carolina Benedetti</A>,
-       <A HREF="https://bergeron.mathstats.yorku.ca/">Nantel Bergeron</A>,
-       <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</A>, and 
-       <A HREF="https://professeurs.uqam.ca/professeur/saliola.franco/">Franco Saliola</A>.
-       34 pages. <tt>ArXiV.org/2406.05311</tt>
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
-
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>7
-</TD> <TD>
    <!--------------------------------------------------------------->             
    <!-------------      Version of March 2024     ------------------>
    <!--------------------------------------------------------------->             
@@ -287,6 +262,32 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 
 <TABLE>
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>7
+</TD> <TD>
+<!------------------------------------------------------------------------>
+<!-----------------      Version of 6 June 2024       -------------------->
+<!------------------------------------------------------------------------>
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/qMurnaghan.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
+     <TD valign=center>
+       <FONT COLOR="FF00FF">
+      <I>A quantum Murnaghan--Nakayama rule for the flag manifold</I></FONT>.
+      with
+       <A HREF="https://sites.google.com/site/carobenedettimath">Carolina Benedetti</A>,
+       <A HREF="https://bergeron.mathstats.yorku.ca/">Nantel Bergeron</A>,
+       <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</A>, and 
+       <A HREF="https://professeurs.uqam.ca/professeur/saliola.franco/">Franco Saliola</A>.
+       in <a href="https://alco.centre-mersenne.org/issues/ALCO_2025__8_3/">Algebraic
+        Combinatorics</a>, Volume 8 (2025) no. 3, 619&ndash;653. <tt>ArXiV.org/2406.05311</tt>
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>8
@@ -880,7 +881,7 @@ Jump to <A HREF="#preprints">preprints</A>,
 <!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>6
+ <TR valign=CENTER><TD align=right>7
 31
 </TD> <TD>
 <!------------------------------------------------------------------------>
