--- a/talks.html
+++ b/talks.html
@@ -131,7 +131,16 @@
     Minisymposium on Methods in Applied and Computational Topology and Geometry
     at the <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
      Austin, TX, 26&ndash;28 September  2025.
-    <a href="talks/25/TX-LA25.txt"></a>
+    <a href="talks/25/TX-LA25_ACTG.txt"></a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Minisymposium on Spectral Theory and Applications of Schrödinger Operators
+    at the <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
+     Austin, TX, 26&ndash;28 September  2025.
+    <a href="talks/25/TX-LA25_Spectral.txt"></a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -146,8 +155,26 @@
     <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
     Plenary talk, <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
       Algebraic Geometry (AG25)</a>,
-    Madison, Wisconsin, 7&ndash;11 July 2025.
+    Madison, Wisconsin, 11 July 2025.
     <a href="talks/25/AG25.txt">abstract</a>.
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some aspects of algebraic geometry in spectral theory</I></font>,
+    <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
+      Algebraic Geometry (AG25)</a>,  Introductory talk, Minisymposium on Algebraic Geometry in Spectral Theory,
+    Madison, Wisconsin, 12 July 2025.
+    <a href="talks/25/AG25.txt">abstract</a>.
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Non-standard reality, an arbitrage opportunity</I></font>,
+    <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
+      Algebraic Geometry (AG25)</a>,  Minisymposium on Real solutions in numerical algebraic geometry,
+    Madison, Wisconsin, 8 July 2025.
+    <a href="talks/25/AG25_Real.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -155,15 +182,6 @@
 <hr>
 <B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
 <ul>
-  <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Non-standard reality, an arbitrage opportunity</I></font>,
-    Plenary talk, <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
-      Algebraic Geometry (AG25)</a>,  Minisymposium on Real solutions in numerical algebraic geometry,
-    Madison, Wisconsin, 7&ndash;11 July 2025.
-    <a href="talks/25/AG25_Real.txt">abstract</a>.
-   </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
