--- a/conferences.html
+++ b/conferences.html
@@ -195,20 +195,6 @@
    program</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://sites.google.com/site/jakefillman/summer-school-2025">Texas A&amp;M Summer School in Mathematical Physics</a>,
-   Texas A&amp;M University,
-   16  &ndash; 20 June  2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://people.tamu.edu/~maier/summerschool2025/">Modeling and Simulation with PDEs: Undergraduate Summer School</a>,
-   Texas A&amp;M University,
-   19  &ndash; 30 May  2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
 </UL>
 
 </td>
@@ -223,7 +209,7 @@
 <address></address>
 <!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Thu Jun 12 01:03:51 PDT 2025 by sottile</p>  
+<p>Last modified: Fri Jul 4 08:03:51 CDT 2025 by sottile</p>  
 <!---------------------------------------------------------------------------------------------------->
 
 </body> </html>
