--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <td colspan=2><b>News:</b>
 
      Ph.D. students Christopher (CJ) Bott and Jordy Cheyem Lopez-Garc&iacute;a both recently defended their Theses and are
-      on their way to postdocs at Brinhgham Young and Notre Dame, respectively.      
+      on their way to postdocs at Brigham Young and Notre Dame, respectively.      
      <br>
       
       I was recently elected as a
