--- a/talks.html
+++ b/talks.html
@@ -161,20 +161,11 @@
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>Some aspects of algebraic geometry in spectral theory</I></font>,
-    <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
-      Algebraic Geometry (AG25)</a>,  Introductory talk, Minisymposium on Algebraic Geometry in Spectral Theory,
-    Madison, Wisconsin, 12 July 2025.
-    <a href="talks/25/AG25.txt">abstract</a>.
-   </li>
-  <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-  <li>
     <FONT COLOR="AA00FF"><I>Non-standard reality, an arbitrage opportunity</I></font>,
     <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
       Algebraic Geometry (AG25)</a>,  Minisymposium on Real solutions in numerical algebraic geometry,
     Madison, Wisconsin, 8 July 2025.
-    <a href="talks/25/AG25_Real.txt">abstract</a>.
+    <a href="talks/25/AG25_Real.txt">abstract</a>. <a href="talks/25/AAG25_real.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
