--- a/teaching/index.html
+++ b/teaching/index.html
@@ -15,14 +15,27 @@
  <DD><B>Texas A&amp;M University</B>
   <UL>
 
-    <li><B><font color="9900FF">Spring 2025</font></B><br>
-      <a href="25.1/RAGA.html">Math 666, Section 600: Real Algebraic GEoemtry for Applications</a>.
-             <!-- 5 (27 Nov 2024) students--><br>
-      Math 691, Section 605, Research. <br>
-      <!--   Credit Hours: Bott (9), -->
+    <li><B><font color="9900FF">Fall 2025</font></B><br>
+      <a href="25.2/653d.html"></a>Math 653: Algebra I.
+             <!--  students--><br>
+   <!--      Math 691, Section 605, Research. <br>
+      Credit Hours: Bott (9), -->
 
       <br><br>
-
+     <li><B><font color="9900FF">Summer 2025</font></B><br>
+      <!--  Math 691, Sections 102, and 201, Research. <br>
+      <!--   15 Credit Hours: Sagayarai (6),  Lopez-Garcia (3), Dutta (6) -->
+      <!--  Math 691, Full Sections 103,  Research. <br>
+      <!--    3 Credit Hours: Bott (3) -->
+      <!--  Math 685, Sections 104. Independent Study <br>
+      <!--    3 Credit Hours:  Daniel Dale (3) -->
+      
+    <li><B><font color="9900FF">Spring 2025</font></B><br>
+      <a href="25.1/RAGA.html">Math 666, Section 600: Real Algebraic Geometry for Applications</a>.
+             <!-- 14 students--><br>
+      Math 691, Section 605, Research. <br>
+      <!--   Credit Hours: Bott (9), -->
+      
     <li><B><font color="9900FF">Fall 2024</font></B><br>
       <a href="24.2/toric.html">Math 666, Section 600: Toric Varieties</a>.
              <!-- 15 students--><br>
