AG talk on line

--- a/talks.html
+++ b/talks.html
@@ -157,6 +157,7 @@
       Algebraic Geometry (AG25)</a>,
     Madison, Wisconsin, 11 July 2025.
     <a href="talks/25/AG25.txt">abstract</a>.
+    <a href="talks/25/AG25.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
