--- a/talks.html
+++ b/talks.html
@@ -136,11 +136,11 @@
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Families of graphs whose Bloch varieties are perfect Morse functions</I></font>,
     Minisymposium on Spectral Theory and Applications of Schrödinger Operators
     at the <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
      Austin, TX, 26&ndash;28 September  2025.
-    <a href="talks/25/TX-LA25_Spectral.txt"></a>
+    <a href="talks/25/TX-LA_Spectral.txt">abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
