did some updates

--- a/advising/index.html
+++ b/advising/index.html
@@ -260,14 +260,26 @@
   </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
-  <li>
-     <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, 2021&ndash;
-  </li>
- <!------------------------------------------------------------------>
- <!------------------------------------------------------------------>
  <BR>
  <!------------------------------------------------------------------>
  <!-----------             Completed Theses             ------------->
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
+     <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, 2021&ndash;2025.  (Ph.D. 2025).
+    <table>
+    <tr><td></td><td></td>
+     <td>Postdoc at University of Notre Dame.</td> 
+    </tr>
+    <tr>
+     <td>&nbsp;</td>
+     <td><A HREF="lopez.pdf"><IMG SRC="../images/pdf.gif"></A></td>
+     <td><font color="ff00ff"><i>Newton Polytopes and Toric Varieties for Periodic Graph Operstors</i></font>,
+        Ph.D.&nbsp;Thesis.
+     </td>
+     </tr>
+    </table>
+  </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
@@ -279,7 +291,7 @@
     <tr>
      <td>&nbsp;</td>
      <td><A HREF="bott.pdf"><IMG SRC="../images/pdf.gif"></A></td>
-     <td><font color="ff00ff"><i>Computation of Schubert Galios Groups</i></font>,
+     <td><font color="ff00ff"><i>Computation of Schubert Galois Groups</i></font>,
         Ph.D.&nbsp;Thesis.
      </td>
      </tr>
