--- a/research/stories/Bestiary/Bestiary.html
+++ b/research/stories/Bestiary/Bestiary.html
@@ -167,13 +167,15 @@
 <!---------------------------------------------------------------------------->
 <table border=1>
   <tr>
-    <td colspan=4><font size=+1>singular House</a></font></td>
+    <td colspan=6><font size=+1>singular House</a></font></td>
   </tr>
   <tr>
     <td><a href="Bestiary/singHouse/graph.eps"><img src="www_images/singHouse_graph.png"></a></td>
     <td><a href="Bestiary/singHouse/polytope.png"><img src="www_images/singHouse_polytope.png"></a></td>
-    <td><a href="Bestiary/singHouse/BV_big.gif"><img src="Bestiary/singHouse/BV.gif"></a></td>
-    <td><a href="Bestiary/singHouse/LtC_big.gif"><img src="Bestiary/singHouse/LtC.gif" height=150pt></a></td>
+    <td><a href="Bestiary/singHouse/BV_general_big.png"><img src="Bestiary/singHouse/BV_general.png" height=150p></a></td>
+    <td><a href="Bestiary/singHouse/BV_1component_big.png"><img src="Bestiary/singHouse/BV_1component.png" height=150p></a></td>
+    <td><a href="Bestiary/singHouse/BV_2components_big.png"><img src="Bestiary/singHouse/BV_2components.png" height=150p></a></td>
+
   </tr>
 </table>    
 <!---------------------------------------------------------------------------->
