--- a/talks.html
+++ b/talks.html
@@ -125,29 +125,51 @@
     <a href="talks/25/RPI.txt"></a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
+  <!-----------------------------------------------------------------
   <li>
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Minisymposium on Methods in Applied and Computational Topology and Geometry
     at the <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
      Austin, TX, 26&ndash;28 September  2025.
     <a href="talks/25/TX-LA25_ACTG.txt"></a>
-   </li>
+   </li>---------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Families of graphs whose Bloch varieties are perfect Morse functions</I></font>,
-    Minisymposium on Spectral Theory and Applications of Schrödinger Operators
-    at the <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
+    Minisymposium on Spectral Theory and Applications of Schr&ouml;dinger Operators at the
+    <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
      Austin, TX, 26&ndash;28 September  2025.
     <a href="talks/25/TX-LA_Spectral.txt">abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>, 
+    <a href="https://www.math.tamu.edu/seminars/cag/"></a>MPHA Seminar,
+    TAMU, 29 August 2025.
+    <a href="talks/25/RealBounds.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Structured Schubert Problems</I></font>, 
+    <a href="https://www.math.tamu.edu/seminars/cag/"></a>Seminar,
+    Western University, London, ON, 4 August 2025.
+  </li>
+  <!---------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
     Seminar, London Institute of Mathematical Sciences, 23 July 2025.
-    <a href="talks/24/Golden.txt">Abstract</a>
+    <a href="talks/24/Golden.txt">Abstract</a>.
+    <a href="talks/25/LIMS.pdf">Text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -168,12 +190,6 @@
     Madison, Wisconsin, 8 July 2025.
     <a href="talks/25/AG25_Real.txt">abstract</a>. <a href="talks/25/AAG25_real.pdf">text of talk</a>.
    </li>
-  <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
