--- a/teaching.html
+++ b/teaching.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
 <title>Frank Sottile's Teaching</title>
@@ -135,12 +136,11 @@
 <!------------------------------------------------------------------------------>
  <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Spring  2025</font></b>
+   <b><FONT SIZE=+1 color=brown>Fall  2025</font></b>
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
-    <tr valign=top><td><font color=brown>MATH 666</font>&nbsp;</td>
-      <td><a href="teaching/25.1/RAGA.html">Real Algebraic<br> Geometry for<br>Applications</a></td>
-      <td align=left>&nbsp;<a href="teaching/25.1/RAGA.txt">Sketch</a> </td>
+    <tr valign=top><td><font color=brown>MATH 653</font>&nbsp;</td>
+      <td><a href="teaching/25.2/653.html"></a>Algebra I</a></td>
       <td colspan=2> Tu-Th 11:10&ndash;12:25.</td><td> Blocker 628
       </td>
     </tr>
